package com.examen;

class Alimento {

  String nombre;

  public Alimento(String nombre) {
    this.nombre = nombre;
  }
}
